Address code review comments and add UpdateTaskUseCase test
Co-authored-by: ViniciusVRodrigues <96784778+ViniciusVRodrigues@users.noreply.github.com>